--- a/SocialWeave/Views/Post/CreatePostImage.cshtml
+++ b/SocialWeave/Views/Post/CreatePostImage.cshtml
@@ -2,6 +2,7 @@
 @{
     ViewData["Title"] = "New Post";
 }
+
 <style>
     .container {
         margin-top: 100px;
@@ -10,8 +11,9 @@
     .card {
         border: none;
         border-radius: 15px;
-        background: linear-gradient(135deg, #4b0082, #000000);
+        background: linear-gradient(135deg, #6a0dad, #000000);
         box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+        padding: 20px;
     }
 
     .form-label {
@@ -37,28 +39,25 @@
         border: none;
         border-radius: 10px;
         padding: 12px;
+        cursor: pointer;
     }
 
     .custom-file-input {
-        color: #fff;
-        cursor: pointer;
-        border: none; 
-        background-color: #9C27B0; 
+        display: none; /* Oculta o input do campo de seleção de arquivo */
     }
-
-        .custom-file-input:focus ~ .custom-file-label::after {
-            border-color: #fff;
-        }
 
     .btn-primary {
         border: none;
         border-radius: 10px;
         padding: 12px 30px;
         font-size: 18px;
+        background-color: #9C27B0;
+        color: #fff;
+        cursor: pointer;
     }
 
         .btn-primary:hover {
-            background-color: #7B1FA2; 
+            background-color: #7B1FA2;
         }
 
         .btn-primary:focus {
@@ -74,28 +73,35 @@
     }
 </style>
 
-<form id="postForm" asp-action="CreatePostImage" asp-controller="Post" method="post">
-    <div class="mb-3 text-center">
-        <label for="formFile" class="form-label">Choose Image:</label>
-        <div class="custom-file">
-            <input type="file" class="form-control custom-file-input" id="formFile" name="ImageFile" accept="image/*" onchange="previewImage(event)">
-            <label class="btn custom-file-label" for="formFile"><i class="bi bi-images"></i></label>
-            <div id="errorMessage" class="text-danger"></div>
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="card">
+                <h2 class="text-center mb-4">@ViewData["Title"]</h2>
+                <form id="postForm" asp-action="CreatePostImage" asp-controller="Post" method="post">
+                    <div class="mb-3 text-center">
+                        <label for="formFile" class="form-label">Choose Image:</label>
+                        <div class="custom-file">
+                            <input type="file" class="form-control custom-file-input" id="formFile" name="ImageFile" accept="image/*" onchange="previewImage(event)">
+                            <label class="custom-file-label" for="formFile"><i class="bi bi-images"></i></label>
+                        </div>
+                        <div id="imagePreview"></div>
+                    </div>
+                    <input type="hidden" id="imageBytes" name="ImageBytes" />
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="mb-3">
+                        <label asp-for="Description" class="form-label">Description:</label>
+                        <textarea class="form-control" rows="5" asp-for="Description"></textarea>
+                        <span asp-validation-for="Description" class="text-danger"></span>
+                    </div>
+                    <div class="text-center">
+                        <button type="button" class="btn btn-outline-primary" onclick="submitForm()"><i class="bi bi-exposure"></i> Submit</button>
+                    </div>
+                </form>
+            </div>
         </div>
-        <div id="imagePreview"></div>
     </div>
-    <input type="hidden" id="imageBytes" name="ImageBytes" />
-    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-    <div class="mb-3">
-        <label asp-for="Description" class="form-label">Description:</label>
-        <textarea class="form-control" rows="5" asp-for="Description"></textarea>
-        <span asp-validation-for="Description" class="text-danger"></span>
-    </div>
-    <div class="text-center">
-        <button type="button" class="btn btn-outline-primary" onclick="submitForm()"><i class="bi bi-exposure"></i> Submit</button>
-    </div>
-</form>
-
+</div>
 
 <script>
     function previewImage(event) {
@@ -118,7 +124,7 @@
                 document.getElementById('postForm').submit();
             }
             reader.readAsArrayBuffer(file);
-        } 
+        }
         else {
             var errorMessageElement = document.getElementById('errorMessage');
             errorMessageElement.innerText = 'Please select an image.';
