Refactored user creation logic and created UserCreateViewModel

--- a/SocialWeave/Views/User/Register.cshtml
+++ b/SocialWeave/Views/User/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model SocialWeave.Models.ConcreteClasses.User
+﻿@model SocialWeave.Models.ViewModels.UserCreateViewModel
 
 <form method="post" asp-controller="User" asp-action="Register" onsubmit="return validateForm()">
     <div class="container">
