--- a/SocialWeave/Views/Shared/_Layout.cshtml
+++ b/SocialWeave/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
                                 <a class="nav-link text-light" asp-area="" asp-controller="User" asp-action="LogoutGet"><i class="bi bi-box-arrow-in-left mx-1"></i></a>
                             </li>
                             <li class="nav-item my-auto">
-                                <h5 class="text-light my-0 mx-2"><strong><i class="bi bi-person-lines-fill"></i>@User.Identity.Name</strong></h5>
+                                <a class="nav-link text-light" asp-area="" asp-controller="User" asp-action="UserPage"><strong><i class="bi bi-person-lines-fill"></i>@User.Identity.Name</strong></a>
                             </li>
                         </ul>
                     }
