--- a/SocialWeave/Views/User/UserPage.cshtml
+++ b/SocialWeave/Views/User/UserPage.cshtml
@@ -3,33 +3,72 @@
 
 @model SocialWeave.Models.ConcreteClasses.User
 
-<title>User Profile</title>
-    <div class="user-profile">
+<div class="text-center">
+@if(User.Identity.Name == Model.Name)
+{
+
+    <h4 class="text-light">Your profile</h4>
+}
+else
+{
+    <h4>Profile of @Model.Name</h4>
+}
+</div>
+
+<div class="user-profile">
+    <div class="text-center">
+        <h2>@Model.Name</h2>
         @if (Model.PictureProfile != null)
         {
-            <img src="@Model.PictureProfile
-            " alt="Profile Picture" />
+            <div style="position: relative; display: inline-block;">
+                <img src="data:image/png;base64,@(Convert.ToBase64String(Model.PictureProfile))" class="img-fluid rounded-circle" style="width: 200px; height: 200px; object-fit: cover;" />
+            </div>
+            @if (User.Identity.Name == Model.Name && Model.PictureProfile != null)
+            {
+                <div class="mt-2">
+                    <a asp-action="AddPictureProfile" asp-controller="User"><i class="bi bi-file-image-fill mx-2"></i>Change picture</a>
+                </div>
+            }
         }
-    @if (User.Identity.Name == Model.Name)
-    {
-        <a asp-action="AddPictureProfile" asp-"><i class="bi bi-file-image-fill mx-2"></i>Add picture</a>
-    }
-    
-        <h2>@Model.Name</h2>
+        @if (User.Identity.Name == Model.Name && Model.PictureProfile == null)
+        {
+            <div class="mt-2">
+                <a asp-action="AddPictureProfile" asp-"><i class="bi bi-file-image-fill mx-2"></i>Add picture</a>
+            </div>
+        }
     </div>
-    <style>
+</div>
+
+@if (User.Identity.Name == Model.Name)
+{
+    <form asp-action="ChangeDescription" asp-controller="User" method="post">
+        <div class="description-container">
+            <div class="description-text">
+            <label asp-for="Description" class="form-label">Description:</label>
+            <textarea class="form-control bg-black text-light" rows="5" asp-for="Description"></textarea>
+            <span asp-validation-for="Description" class="text-danger"></span>
+        </div>
+        </div>
+    </form>
+}
+else
+{
+    
+}
+<div class="custom-border"></div>
+<style>
     .custom-border {
         width: 100%;
         height: 2px;
         background: linear-gradient(to right, #000080, #4B0082);
-        margin: 40px 0;
+        margin: 90px 0;
     }
 
     .post {
         border: 1px solid #ccc;
         border-radius: 8px;
         padding: 20px;
-        margin-bottom: 40px;
+        margin-bottom: 80px; 
     }
 
     .post-header {
@@ -41,101 +80,111 @@
     .post-meta {
         text-align: center;
     }
+
+    .description-container {
+        background-color: black;
+        padding: 10px;
+        margin-top: 20px;
+        width: 40%;
+    }
+
+    .description-text {
+        color: white;
+    }
 </style>
 
-
-    @if (Model == null)
+@if (Model == null)
+{
+    <div class="text-center">
+        <h4><strong>No new posts</strong></h4>
+        <a asp-action="Index" asp-controller="Home"><i class="bi bi-arrow-clockwise"></i></a>
+    </div>
+}
+<div class="container text-center">
+    @foreach (var post in Model.Posts)
     {
-        <div class="text-center">
-            <h4><strong>No new posts</strong></h4>
-            <a asp-action="Index" asp-controller="Home"><i class="bi bi-arrow-clockwise"></i></a>
-        </div>
-    }
-    <div class="container text-center">
-        @foreach (var post in Model.Posts)
+        if (post is PostWithoutImage)
         {
-            if (post is PostWithoutImage)
-            {
-                <div class="post" style="margin-bottom: 80px;">
-                    <div class="post-header">
-                        <h5><i class="bi bi-person-circle mx-2"></i>@post.User.Name.CutName()</h5>
-                        <div class="post-meta">
-                            <p>@post.Date.Duration()</p>
-                        </div>
-                        <div class="post-content text-xxl-center">
+            <div class="post" style="margin-bottom: 80px;">
+                <div class="post-header">
+                    <h5><i class="bi bi-person-circle mx-2"></i>@post.User.Name.CutName()</h5>
+                    <div class="post-meta">
+                        <p>@post.Date.Duration()</p>
+                    </div>
+                    <div class="post-content text-xxl-center">
+                    </div>
+                </div>
+                <div class="post-content text-xxl-start">
+                    <p>@post.Description.CutDescription()</p>
+                    <div class="d-flex justify-content-between mb-3">
+                        <button class="btn btn-outline-primary toggle-comments" data-post-id="@post.Id"><i class="bi bi-chat-left-text"></i></button>
+                        <div class="d-flex flex-column">
+                            @if (post.Likes != null && post.Likes.Any(l => l.User.Name == User.Identity.Name))
+                            {
+                                <form method="post" asp-action="Dislike" asp-route-id="@post.Id" asp-controller="Post" class="me-3">
+                                    <button class="text-xxl-end btn btn-purple" type="submit"><i class="bi bi-heart-fill text-danger"></i> <span class="m-0 text-danger">@post.Likes.CountLikes()</span></button>
+                                </form>
+                            }
+                            else
+                            {
+                                <form method="post" asp-action="Like" asp-route-id="@post.Id" asp-controller="Post" class="me-3">
+                                    <button type="submit" class="btn btn-purple"><i class="bi bi-heart text-danger"></i> <span class="m-0 text-danger">@post.Likes.CountLikes()</span></button>
+                                </form>
+                            }
                         </div>
                     </div>
-                    <div class="post-content text-xxl-start">
-                        <p>@post.Description.CutDescription()</p>
-                        <div class="d-flex justify-content-between mb-3">
-                            <button class="btn btn-outline-primary toggle-comments" data-post-id="@post.Id"><i class="bi bi-chat-left-text"></i></button>
-                            <div class="d-flex flex-column">
-                                @if (post.Likes != null && post.Likes.Any(l => l.User.Name == User.Identity.Name))
+                    <div class="text-xxl">
+                        <div class="post-comments" data-post-id="@post.Id" style="display: none;">
+                            <div class="comment">
+                                <div class="custom-border"></div>
+                                <p class="text-center text-primary">Comments</p>
+                                <div class="custom-border"></div>
+                                @if (post.Comments == null || !post.Comments.Any())
                                 {
-                                    <form method="post" asp-action="Dislike" asp-route-id="@post.Id" asp-controller="Post" class="me-3">
-                                        <button class="text-xxl-end btn btn-purple" type="submit"><i class="bi bi-heart-fill text-danger"></i> <span class="m-0 text-danger">@post.Likes.CountLikes()</span></button>
-                                    </form>
+                                    <h6 class="text-center">No exist comments in this post</h6>
                                 }
                                 else
                                 {
-                                    <form method="post" asp-action="Like" asp-route-id="@post.Id" asp-controller="Post" class="me-3">
-                                        <button type="submit" class="btn btn-purple"><i class="bi bi-heart text-danger"></i> <span class="m-0 text-danger">@post.Likes.CountLikes()</span></button>
-                                    </form>
-                                }
-                            </div>
-                        </div>
-                        <div class="text-xxl">
-                            <div class="post-comments" data-post-id="@post.Id" style="display: none;">
-                                <div class="comment">
-                                    <div class="custom-border"></div>
-                                    <p class="text-center text-primary">Comments</p>
-                                    <div class="custom-border"></div>
-                                    @if (post.Comments == null || !post.Comments.Any())
-                                    {
-                                        <h6 class="text-center">No exist comments in this post</h6>
-                                    }
-                                    else
-                                    {
-                                        <div class="text-center">
-                                            @foreach (var comment in post.Comments)
-                                            {
-                                                <div class="comment-container d-flex align-items-center mb-3">
-                                                    <div class="comment-details">
-                                                        <h9 class="text-primary d-inline-block"><i class="bi bi-person-circle mx-2 text-primary"></i>@comment.User.Name.CutName()</h9>
-                                                        <p class="d-inline-block mx-2">@comment.Text.CutComment()</p>
-                                                    </div>
-                                                    <div class="comment-like ms-auto">
-                                                        @if (comment.Likes != null && comment.Likes.Count() != 0 && post.Likes.Any(l => l.User.Name == User.Identity.Name))
-                                                        {
-                                                            <form method="post" asp-action="DislikeComment" asp-route-id="@comment.Id" asp-controller="Post">
-                                                                <button type="submit" class="btn btn-like-comment"><i class="bi bi-heart-fill text-danger"></i> <span class="m-0 text-danger">@comment.Likes.CountLikes()</span></button>
-                                                            </form>
-                                                        }
-                                                        else
-                                                        {
-                                                            <form method="post" asp-action="LikeComment" asp-route-id="@comment.Id" asp-controller="Post">
-                                                                <button type="submit" class="btn btn-like-comment"><i class="bi bi-heart text-danger"></i> <span class="m-0 text-danger">@comment.Likes.CountLikes()</span></button>
-                                                            </form>
-                                                        }
-                                                    </div>
+                                    <div class="text-center">
+                                        @foreach (var comment in post.Comments)
+                                        {
+                                            <div class="comment-container d-flex align-items-center mb-3">
+                                                <div class="comment-details">
+                                                    <h9 class="text-primary d-inline-block"><i class="bi bi-person-circle mx-2 text-primary"></i>@comment.User.Name.CutName()</h9>
+                                                    <p class="d-inline-block mx-2">@comment.Text.CutComment()</p>
                                                 </div>
-                                                <hr />
-                                            }
-                                        </div>
-                                    }
-                                    <a class="btn btn-outline-primary text-xxl-center mb-3" asp-route-id="@post.Id" asp-action="CreateComment" asp-controller="Post"><i class="bi bi-chat-left text-primary"></i> Add Comment</a>
-                                </div>
-                                <form class="add-comment-form" style="display: none;">
-                                    <input type="text" class="form-control mb-3" placeholder="Add a comment..." />
-                                    <button type="submit" class="btn btn-primary">Add</button>
-                                </form>
+                                                <div class="comment-like ms-auto">
+                                                    @if (comment.Likes != null && comment.Likes.Count() != 0 && post.Likes.Any(l => l.User.Name == User.Identity.Name))
+                                                    {
+                                                        <form method="post" asp-action="DislikeComment" asp-route-id="@comment.Id" asp-controller="Post">
+                                                            <button type="submit" class="btn btn-like-comment"><i class="bi bi-heart-fill text-danger"></i> <span class="m-0 text-danger">@comment.Likes.CountLikes()</span></button>
+                                                        </form>
+                                                    }
+                                                    else
+                                                    {
+                                                        <form method="post" asp-action="LikeComment" asp-route-id="@comment.Id" asp-controller="Post">
+                                                            <button type="submit" class="btn btn-like-comment"><i class="bi bi-heart text-danger"></i> <span class="m-0 text-danger">@comment.Likes.CountLikes()</span></button>
+                                                        </form>
+                                                    }
+                                                </div>
+                                            </div>
+                                            <hr />
+                                        }
+                                    </div>
+                                }
+                                <a class="btn btn-outline-primary text-xxl-center mb-3" asp-route-id="@post.Id" asp-action="CreateComment" asp-controller="Post"><i class="bi bi-chat-left text-primary"></i> Add Comment</a>
                             </div>
+                            <form class="add-comment-form" style="display: none;">
+                                <input type="text" class="form-control mb-3" placeholder="Add a comment..." />
+                                <button type="submit" class="btn btn-primary">Add</button>
+                            </form>
                         </div>
                     </div>
                 </div>
-            }
+            </div>
         }
-    </div>
+    }
+</div>
 
 @if (Model != null)
 {
@@ -227,7 +276,6 @@
         }
     }
 }
-
 
 @section Scripts {
     <script>
