--- a/SocialWeave/Views/User/UserPage.cshtml
+++ b/SocialWeave/Views/User/UserPage.cshtml
@@ -1,36 +1,41 @@
 ﻿@using SocialWeave.Extensions;
 @using SocialWeave.Models.ConcreteClasses;
 
-@model SocialWeave.Models.ConcreteClasses.User
+@model SocialWeave.Models.ViewModels.UserPageViewModel
 
 <div class="text-center">
-    @if (User.Identity.Name == Model.Name)
+    @if (User.Identity.Name == Model.User.Name)
     {
 
         <h4 class="text-light">Your profile</h4>
     }
     else
     {
-        <h4>Profile of @Model.Name</h4>
+        <h4>Profile of @Model.User.Name</h4>
     }
 </div>
 
 <div class="user-profile">
     <div class="text-center">
-        <h2>@Model.Name</h2>
-        @if (Model.PictureProfile != null)
+        <h2>@Model.User.Name</h2>
+        @if (Model.User.PictureProfile != null)
         {
             <div style="position: relative; display: inline-block;">
-                <img src="data:image/png;base64,@(Convert.ToBase64String(Model.PictureProfile))" class="img-fluid rounded-circle" style="width: 200px; height: 200px; object-fit: cover;" />
+                <img src="data:image/png;base64,@(Convert.ToBase64String(Model.User.PictureProfile))" class="img-fluid rounded-circle" style="width: 200px; height: 200px; object-fit: cover;" />
             </div>
-            @if (User.Identity.Name == Model.Name && Model.PictureProfile != null)
+            <div>
+                <p>
+                    Connected with @Model.User.Name.CutName()
+                </p>
+            </div>
+            @if (User.Identity.Name == Model.User.Name && Model.User.PictureProfile != null)
             {
                 <div class="mt-2">
                     <a asp-action="AddPictureProfile" asp-controller="User"><i class="bi bi-file-image-fill mx-2"></i>Change picture</a>
                 </div>
             }
         }
-        @if (User.Identity.Name == Model.Name && Model.PictureProfile == null)
+        @if (User.Identity.Name == Model.User.Name && Model.User.PictureProfile == null)
         {
             <div class="mt-2">
                 <a asp-action="AddPictureProfile" asp-"><i class="bi bi-file-image-fill mx-2"></i>Add picture</a>
@@ -39,21 +44,21 @@
     </div>
 </div>
 
-@if (User.Identity.Name == Model.Name)
+@if (User.Identity.Name == Model.User.Name)
 {
     <form id="changeDescriptionForm" asp-action="ChangeDescription" asp-controller="User" method="post">
         <div class="description-birthdate-container">
             <div class="description-container text-center ">
                 <div class="description-text">
-                    <label asp-for="Description" class="form-label">Description:</label>
-                    <textarea id="descriptionTextArea" class="form-control bg-black text-light" rows="5" asp-for="Description"></textarea>
-                    <span asp-validation-for="Description" class="text-danger"></span>
+                    <label asp-for="User.Description" class="form-label">Description:</label>
+                    <textarea id="descriptionTextArea" class="form-control bg-black text-light" rows="5" asp-for="User.Description"></textarea>
+                    <span asp-validation-for="User.Description" class="text-danger"></span>
                 </div>
             </div>
             <div class="birthdate-container">
                 <div class="text-end">
                     <p>Birth Date: </p>
-                    <h9>@Model.BirthDate.ToString("dd/MM/yyyy")</h9>
+                    <h9>@Model.User.BirthDate.ToString("dd/MM/yyyy")</h9>
                 </div>
             </div>
         </div>
@@ -63,19 +68,19 @@ else
 {
     <div class="description-container text-center">
         <div class="description-text bg-black text-light p-2">
-            <label asp-for="Description" class="form-label">Description:</label>
+            <label asp-for="User.Description" class="form-label">Description:</label>
             <div class="form-control" readonly>
-                @Model.Description
+                @Model.User.Description
             </div>
         </div>
     </div>
 }
 
-@if(User.Identity.Name != Model.Name)
+@if(User.Identity.Name != Model.User.Name)
 {
     <div class="text-center">
         <form asp-action="AddConnection" asp-controller="User" method="post">
-            <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="User.Id" />
             <button type="submit" class="btn btn-outline-primary">Connect</button>
         </form>
     </div>
@@ -137,7 +142,7 @@ else
 
 
 <div class="container text-center">
-    @foreach (var post in Model.Posts)
+    @foreach (var post in Model.User.Posts)
     {
         if (post is PostWithoutImage)
         {
@@ -224,7 +229,7 @@ else
 
 @if (Model != null)
 {
-    @foreach (var post in Model.Posts)
+    @foreach (var post in Model.User.Posts)
     {
         if (post is PostWithImage)
         {
